--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
+# Virtual environments
+.env
+.venv
+env/
 venv/
+
+# Environment variable files
+backend/.env
+*.env
+
+# Python cache and logs
+*.log
+*.db
+*.sqlite3
+
+# Docker
+**/.dockerignore
